--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.14.5",
     "@mui/styled-engine-sc": "^5.12.0",
     "axios": "^1.4.0",
+    "firebase": "^10.3.0",
     "firebase-admin": "^11.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
